ex/ex1.err
$ python ex1.py
  File "ex1.py", line 3
    print "I like typing this.
                             ^
SyntaxError: EOL while scanning single-quoted string
$ 
